; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_cfgrtl.c_delete_insn_and_edges.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_cfgrtl.c_delete_insn_and_edges.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @delete_insn_and_edges(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  store i32 0, i32* %4, align 4
  %5 = load i64, i64* %2, align 8
  %6 = call i64 @INSN_P(i64 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %19

8:                                                ; preds = %1
  %9 = load i64, i64* %2, align 8
  %10 = call i64 @BLOCK_FOR_INSN(i64 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %19

12:                                               ; preds = %8
  %13 = load i64, i64* %2, align 8
  %14 = call i64 @BLOCK_FOR_INSN(i64 %13)
  %15 = call i64 @BB_END(i64 %14)
  %16 = load i64, i64* %2, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %12
  store i32 1, i32* %4, align 4
  br label %19

19:                                               ; preds = %18, %12, %8, %1
  %20 = load i64, i64* %2, align 8
  %21 = call i64 @delete_insn(i64 %20)
  store i64 %21, i64* %3, align 8
  %22 = load i32, i32* %4, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %28

24:                                               ; preds = %19
  %25 = load i64, i64* %2, align 8
  %26 = call i64 @BLOCK_FOR_INSN(i64 %25)
  %27 = call i32 @purge_dead_edges(i64 %26)
  br label %28

28:                                               ; preds = %24, %19
  %29 = load i64, i64* %3, align 8
  ret i64 %29
}

declare dso_local i64 @INSN_P(i64) #1

declare dso_local i64 @BLOCK_FOR_INSN(i64) #1

declare dso_local i64 @BB_END(i64) #1

declare dso_local i64 @delete_insn(i64) #1

declare dso_local i32 @purge_dead_edges(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
